# bluez-firmware

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
.pc/: applied-patches
.pc/add-BCM43430B0-hcd.patch/: Makefile.am
.pc/add-BCM4345C5-hcd.patch/: Makefile.am
.pc/synaptics.patch/: Makefile.am
broadcom/: BCM-LEGAL.txt  README.txt  bcm_changeba  bcm_changeid  bcm_hex2bin
debian/: README.Debian  bluez-firmware.docs  bluez-firmware.install  bluez-firmware.links  changelog  control  copyright  gbp.conf  rules
debian/firmware/broadcom/: BCM4343A2.hcd  LICENSE.cypress
debian/patches/: add-BCM43430A1-bin.patch  add-BCM43430B0-hcd.patch  add-BCM4345C5-hcd.patch  synaptics.patch
debian/source/: include-binaries
synaptics/: LICENSE.synaptics
